--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,13 +1,13 @@
 ---
-const { text, variant = "primary", href = "#" } = Astro.props;
+const { text, variant = 'primary', href = '#' } = Astro.props;
 ---
 
 <a
   href={href}
   class={`inline-flex items-center px-6 py-3 rounded-lg text-white font-medium text-base transition ${
-    variant === "primary"
-      ? "bg-primary hover:bg-red-600 hover:text-white"
-      : "bg-secondary hover:bg-indigo-600"
+    variant === 'primary'
+      ? 'bg-primary hover:bg-red-600 hover:text-white'
+      : 'bg-secondary hover:bg-indigo-600'
   }`}
 >
   {text}
