--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,88 +5,171 @@ import Announcement from '../components/announcement.astro';
 ---
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
-	<div class="container mx-auto px-4 sm:px-6 lg:px-8">
-		<nav class="flex justify-between items-center h-16">
-			<div class="flex-shrink-0">
-				<a href="/">
-					<img src="/images/build2learn-logo.svg" fetchpriority="high" loading="eager" width="179" height="24" />
-				</a>
-			</div>
-			<div class="hidden md:block">
-				<div class="flex items-center space-x-4">
-					<HeaderLink href="/" class="px-3 py-2 text-gray-700 hover:text-primary">Home</HeaderLink>
-					<HeaderLink href="/events" class="px-3 py-2 text-gray-700 hover:text-primary">Events</HeaderLink>
-					<HeaderLink href="/blog" class="px-3 py-2 text-gray-700 hover:text-primary">Blog</HeaderLink>
-					<HeaderLink href="/project" class="px-3 py-2 text-gray-700 hover:text-primary">Projects</HeaderLink>
-					<HeaderLink href="/ideas" class="px-3 py-2 text-gray-700 hover:text-primary">Ideas</HeaderLink>
-					<HeaderLink href="/about" class="px-3 py-2 text-gray-700 hover:text-primary">About</HeaderLink>
-				</div>
-			</div>
-			<div class="hidden md:flex items-center space-x-3">
-				<a href="https://www.linkedin.com/company/build2learn/" target="_blank" class="text-gray-500 hover:text-gray-700">
-					<span class="sr-only">Linkedin</span>
-					<svg xmlns="http://www.w3.org/2000/svg"  aria-hidden="true" fill="currentColor" class="w-6 h-6" viewBox="0 0 16 16">
-						<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-					</svg>
-				</a>
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+    <nav class="flex justify-between items-center h-16">
+      <div class="flex-shrink-0">
+        <a href="/">
+          <img
+            src="/images/build2learn-logo.svg"
+            fetchpriority="high"
+            loading="eager"
+            width="179"
+            height="24"
+          />
+        </a>
+      </div>
+      <div class="hidden md:block">
+        <div class="flex items-center space-x-4">
+          <HeaderLink
+            href="/"
+            class="px-3 py-2 text-gray-700 hover:text-primary">Home</HeaderLink
+          >
+          <HeaderLink
+            href="/events"
+            class="px-3 py-2 text-gray-700 hover:text-primary"
+            >Events</HeaderLink
+          >
+          <HeaderLink
+            href="/blog"
+            class="px-3 py-2 text-gray-700 hover:text-primary">Blog</HeaderLink
+          >
+          <HeaderLink
+            href="/project"
+            class="px-3 py-2 text-gray-700 hover:text-primary"
+            >Projects</HeaderLink
+          >
+          <HeaderLink
+            href="/ideas"
+            class="px-3 py-2 text-gray-700 hover:text-primary">Ideas</HeaderLink
+          >
+          <HeaderLink
+            href="/about"
+            class="px-3 py-2 text-gray-700 hover:text-primary">About</HeaderLink
+          >
+        </div>
+      </div>
+      <div class="hidden md:flex items-center space-x-3">
+        <a
+          href="https://www.linkedin.com/company/build2learn/"
+          target="_blank"
+          class="text-gray-500 hover:text-gray-700"
+        >
+          <span class="sr-only">Linkedin</span>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+            fill="currentColor"
+            class="w-6 h-6"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
+            ></path>
+          </svg>
+        </a>
 
+        <a
+          href="https://github.com/build2learn-in/"
+          target="_blank"
+          class="text-gray-500 hover:text-gray-700"
+        >
+          <span class="sr-only">GitHub</span>
+          <svg viewBox="0 0 16 16" aria-hidden="true" class="w-6 h-6">
+            <path
+              fill="currentColor"
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+            ></path>
+          </svg>
+        </a>
+        <a
+          href="https://twitter.com/build2learn_in"
+          target="_blank"
+          class="text-gray-500 hover:text-gray-700"
+        >
+          <span class="sr-only">Twitter</span>
+          <svg viewBox="0 0 16 16" aria-hidden="true" class="w-6 h-6">
+            <path
+              fill="currentColor"
+              d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
+            ></path>
+          </svg>
+        </a>
+      </div>
 
-				<a href="https://github.com/build2learn-in/" target="_blank" class="text-gray-500 hover:text-gray-700">
-					<span class="sr-only">GitHub</span>
-					<svg viewBox="0 0 16 16" aria-hidden="true" class="w-6 h-6">
-						<path
-							fill="currentColor"
-							d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-						></path>
-					</svg>
-				</a>
-				<a href="https://twitter.com/build2learn_in" target="_blank" class="text-gray-500 hover:text-gray-700">
-					<span class="sr-only">Twitter</span>
-					<svg viewBox="0 0 16 16" aria-hidden="true" class="w-6 h-6">
-						<path
-							fill="currentColor"
-							d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
-						></path>
-					</svg>
-				</a>
-			</div>
-			
-			<!-- Mobile menu button -->
-			<div class="md:hidden flex items-center">
-				<button type="button" class="mobile-menu-button inline-flex items-center justify-center p-2 rounded-md text-gray-700 hover:text-primary hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary">
-					<span class="sr-only">Open main menu</span>
-					<svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-					</svg>
-				</button>
-			</div>
-		</nav>
-	</div>
-	
-	<!-- Mobile menu, show/hide based on menu state -->
-	<div class="mobile-menu hidden md:hidden">
-		<div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-			<a href="/" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Home</a>
-			<a href="/events" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Events</a>
-			<a href="/blog" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Blog</a>
-			<a href="/project" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Project</a>
-			<a href="/ideas" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Ideas</a>
-			<a href="/about" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">About</a>
-		</div>
-	</div>
+      <!-- Mobile menu button -->
+      <div class="md:hidden flex items-center">
+        <button
+          type="button"
+          class="mobile-menu-button inline-flex items-center justify-center p-2 rounded-md text-gray-700 hover:text-primary hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary"
+        >
+          <span class="sr-only">Open main menu</span>
+          <svg
+            class="block h-6 w-6"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+    </nav>
+  </div>
+
+  <!-- Mobile menu, show/hide based on menu state -->
+  <div class="mobile-menu hidden md:hidden">
+    <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+      <a
+        href="/"
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50"
+        >Home</a
+      >
+      <a
+        href="/events"
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50"
+        >Events</a
+      >
+      <a
+        href="/blog"
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50"
+        >Blog</a
+      >
+      <a
+        href="/project"
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50"
+        >Project</a
+      >
+      <a
+        href="/ideas"
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50"
+        >Ideas</a
+      >
+      <a
+        href="/about"
+        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50"
+        >About</a
+      >
+    </div>
+  </div>
 </header>
 
 <script>
-	// Mobile menu toggle
-	document.addEventListener('DOMContentLoaded', () => {
-		const mobileMenuButton = document.querySelector('.mobile-menu-button');
-		const mobileMenu = document.querySelector('.mobile-menu');
-		
-		if (mobileMenuButton && mobileMenu) {
-			mobileMenuButton.addEventListener('click', () => {
-				mobileMenu.classList.toggle('hidden');
-			});
-		}
-	});
+  // Mobile menu toggle
+  document.addEventListener('DOMContentLoaded', () => {
+    const mobileMenuButton = document.querySelector('.mobile-menu-button');
+    const mobileMenu = document.querySelector('.mobile-menu');
+
+    if (mobileMenuButton && mobileMenu) {
+      mobileMenuButton.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+    }
+  });
 </script>
 <Announcement />
