fix: updated the preview image of the blog posts

--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -23,7 +23,7 @@ const {
 
 <html lang="en">
   <head>
-    <BaseHead title={title} description={description} />
+    <BaseHead title={title} description={description} image={photo} />
     <style>
       main {
         width: calc(100% - 2em);
