fix: updated the preview image of the event pages

--- a/src/pages/events/[...slug].astro
+++ b/src/pages/events/[...slug].astro
@@ -92,6 +92,7 @@ const logoColors = {
     <BaseHead
       title={`${event.data.title} | Build2Learn`}
       description={event.data.description}
+      image={event.data.heroImage}
     />
   </head>
   <body>
