fix: announcement banner display logic + link  and updated event detail

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -172,4 +172,4 @@ import Announcement from '../components/announcement.astro';
     }
   });
 </script>
-<Announcement />
+{!Astro.url.pathname.startsWith('/events') && <Announcement />}
